# NRE

./: CMakeLists.txt
CNN+ATT/: init.h  test.cpp  test.h  train.cpp
CNN+ONE/: init.h  test.cpp  test.h  train.cpp
PCNN+ATT/: init.h  test.cpp  test.h  train.cpp
PCNN+ONE/: init.h  test.cpp  test.h  train.cpp
